--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 !libdiskfs/diskfs.h
 !libdiskfs/opts-append-std.c
 !libdiskfs/file-statfs.c
+!libdiskfs/conch-fetch.c
+!libdiskfs/rdwr-internal.c
 libdiskfs/*.c~
 libdiskfs/*.h~
 
